# EDD_1S2020_P1_201801397

./: Archive.h  CMakeLists.txt  Change.h  DoubleLinkedCircularList.h  DoubleLinkedList.h  LinkedCircularList.h  LinkedList.h  Nodo.h  Stack.h  Word.h  main.cpp
